# technopark-homework

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.yml
Source/: functionDescriptor.c  functionDescriptor.h  io.c  io.h  main.c  parser.c  parser.h
Source/utilities/: DynamicString.c  DynamicString.h
tests/: reference.py  referenceOutput.txt  test.c  test.cpp
